tests/snapshots/integration__integration_tests__config_show__config_show_zsh_compinit_warning.snap
---
source: tests/integration_tests/config_show.rs
info:
  program: wt
  args:
    - config
    - show
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    HOME: "[TEST_HOME]"
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_BIN: ""
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
    XDG_CONFIG_HOME: "[TEST_CONFIG_HOME]"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
⚪ Global Config: [1m~/.config/worktrunk/config.toml[22m
💡 [2mEmpty file (using defaults)[22m

⚪ Project Config: [1m[REPO]/.config/wt.toml[22m
💡 [2mNot found[22m

⚪ Already configured shell extension & completions for [1mzsh[22m @ ~/.zshrc
🟡 [33mCompletions won't work; add to ~/.zshrc before the wt line:[39m
[107m [0m  autoload -Uz compinit && compinit
[2m⚪ Skipped bash; ~/.bashrc not found[22m
[2m⚪ Skipped fish; ~/.config/fish/conf.d not found[22m
